Atualiza link do LinkedIn para abrir em nova aba com atributos de segurança

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <div class="col-lg-6">
             <h1 class="display-4 fw-bold">Transformando ideias em interfaces dinâmicas e funcionais.</h1>
             <p class="lead mb-4">Estou em busca de um estágio em desenvolvimento front-end para aplicar minhas habilidades em HTML, CSS e JavaScript, criando experiências incríveis para os usuários.</p>
-            <a href="https://www.linkedin.com/in/pedro-rom%C3%A1rio-209a05331/" class="btn btn-primary btn-lg">LinkedIn</a>
+            <a href="https://www.linkedin.com/in/pedro-rom%C3%A1rio-209a05331/" class="btn btn-primary btn-lg" target="_blank" rel="noopener noreferrer">LinkedIn</a>
           </div>
           <div class="col-lg-6 d-none d-lg-block">
             <img src="/img/imagem-principal.jpg" class="img-fluid" alt="Imagem Hero">
